Fix wrap of long operator labels

--- a/css/main.scss
+++ b/css/main.scss
@@ -150,6 +150,7 @@ img.w550 {
     padding: 0.1em 0.5em;
     font-size: 0.8em;
     font-weight: 500;
+    white-space: nowrap;
     a {
         text-decoration: none;
     }
